...
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>

    <string name="hint_user">Username</string>
    <string name="hint_pass">Password</string>
    <string name="hint_email">E-mail</string>

...
    <string name="confirm_change_text">Save Changes</string>

    <string name="credit_label">Credits:</string>
    <string name="email_label">email_here</string>

    <string name="cancel_button_text">Cancel</string>
    <string name="reg_submit_button_text">Submit</string>

    <string name="categories_text">Categories</string>
    <string name="rec_text">Recommendations</string>

    <string name="list_it">List It!</string>
    <string name="take_it">Take It!</string>
...
