...
    tools:context=".PreferencesActivity">

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttonSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">
        <RadioButton
            android:id="@+id/checkBoxFi"
            android:layout_width="363dp"
...

    <android.support.design.button.MaterialButton
        android:id="@+id/buttonSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Sign Me Up!"
        app:cornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/radio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonBack"
        app:layout_constraintStart_toStartOf="parent" />

...
